Add connector-managed snapshot support and unify COMMAND-mode handling (#88)